# bincode2

./: Cargo.toml
src/: config.rs  error.rs  internal.rs  lib.rs
src/de/: mod.rs  read.rs
src/ser/: mod.rs
