[package]

name = "bincode2"
version = "2.0.3" # remember to update html_root_url
authors = ["Tom Kaitchuck <Tom.Kaitchuck@dell.com>","Jesús Redrado <jesus.redrado@gmail.com>"]
exclude = ["logo.png", "examples/*", ".gitignore", ".travis.yml"]
publish =  true

repository = "https://github.com/pravega/bincode2"
documentation = "https://docs.rs/bincode2"
readme = "./readme.md"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "decode", "serialize", "deserialize"]

license = "MIT"
description = "A binary serialization / deserialization strategy that uses Serde for transforming structs into bytes and vice versa!"


[dependencies]

#thiserror_core2 = {version = "2.0.0", default-features = false}
thiserror_core2 = {version = "2.0.0", git="https://github.com/jredrado/thiserror-core2.git", default-features = false}

byteorder = {git = "https://github.com/jredrado/byteorder.git", default-features=false, branch="update-to-core2", package="byteorder_bare-io"}
core2 = { version="0.3.5",git = "https://github.com/jredrado/core2", branch = "main", default-features=false, features=["alloc","nightly"]}

serde = { version = "1.0", default-features = false, features = ["derive","alloc","rc"] }

[dev-dependencies]
serde_bytes = {version="0.11.3", default-features = false, features = ["alloc"] }
serde_derive = "1.0.104"
